--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.security.oauth2.client.registration.github.client-secret=4892194698a9f666
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mdd_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mdd_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
